--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@
                     <button id="retry" onclick="retry()">Retry</button>
                 </div>
                 <div id="colours">
-                    <div class="ball"></div>
-                    <div class="ball"></div>
-                    <div class="ball"></div>
-                    <div class="ball"></div>
-                    <div class="ball"></div>
-                    <div class="ball"></div>
+                    <div draggable="true" class="ball"></div>
+                    <div draggable="true" class="ball"></div>
+                    <div draggable="true" class="ball"></div>
+                    <div draggable="true" class="ball"></div>
+                    <div draggable="true" class="ball"></div>
+                    <div draggable="true" class="ball"></div>
                 </div>
                 <button id="sub" onclick="sub()">Play</button>
             </div>
